Fix: Rutas abdolutas.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Bangers&family=Cinzel+Decorative&family=Lobster&family=Press+Start+2P&family=Rubik+Moonrocks&family=Stardos+Stencil&display=swap"
       rel="stylesheet"
@@ -35,7 +35,7 @@
       <div class="container">
         <div class="logo">
           <a href="/">
-            <img src="/assets/img/elogo.webp" alt="EmpireCasino Logo" />
+            <img src="assets/img/elogo.webp" alt="EmpireCasino Logo" />
           </a>
         </div>
 
@@ -59,7 +59,7 @@
 
     <section class="hero-casino">
       <video autoplay muted loop playsinline class="hero-video">
-        <source src="/assets/video/background.mp4" type="video/mp4" />
+        <source src="assets/video/background.mp4" type="video/mp4" />
       </video>
       <div class="hero-overlay"></div>
 
@@ -103,27 +103,27 @@
 
         <div class="hero-img">
           <img
-            src="/assets/img/hero-elements/rueda.png"
+            src="assets/img/hero-elements/rueda.png"
             class="element rueda"
           />
           <img
-            src="/assets/img/hero-elements/cartas.png"
+            src="assets/img/hero-elements/cartas.png"
             class="element cartas"
           />
           <img
-            src="/assets/img/hero-elements/dados.png"
+            src="assets/img/hero-elements/dados.png"
             class="element dados"
           />
           <img
-            src="/assets/img/hero-elements/fichas-rojas.png"
+            src="assets/img/hero-elements/fichas-rojas.png"
             class="element fichas-rojas"
           />
           <img
-            src="/assets/img/hero-elements/fichas-verdes.png"
+            src="assets/img/hero-elements/fichas-verdes.png"
             class="element fichas-verdes"
           />
           <img
-            src="/assets/img/hero-elements/monedas.png"
+            src="assets/img/hero-elements/monedas.png"
             class="element monedas"
           />
         </div>
@@ -142,36 +142,36 @@
 
       <div class="platform-container">
         <div class="platform-mockup">
-          <img src="/assets/img/background-2.webp" alt="Platform Dashboard" />
+          <img src="assets/img/background-2.webp" alt="Platform Dashboard" />
         </div>
 
         <img
-          src="/assets/img/plataform/Asset-2.png"
+          src="assets/img/plataform/Asset-2.png"
           class="floating-card card-1"
           alt="Carta 1"
         />
         <img
-          src="/assets/img/plataform/Asset-3.png"
+          src="assets/img/plataform/Asset-3.png"
           class="floating-card card-2"
           alt="Carta 2"
         />
         <img
-          src="/assets/img/plataform/Asset-2.png"
+          src="assets/img/plataform/Asset-2.png"
           class="floating-card card-3"
           alt="Carta 3"
         />
         <img
-          src="/assets/img/plataform/Asset-2.png"
+          src="assets/img/plataform/Asset-2.png"
           class="floating-card card-4"
           alt="Carta 4"
         />
         <img
-          src="/assets/img/plataform/Asset-3.png"
+          src="assets/img/plataform/Asset-3.png"
           class="floating-card card-5"
           alt="Carta 5"
         />
         <img
-          src="/assets/img/plataform/Asset-3.png"
+          src="assets/img/plataform/Asset-3.png"
           class="floating-card card-6"
           alt="Carta 6"
         />
@@ -184,7 +184,7 @@
         <div class="games-slider">
           <div class="games-track">
             <div class="game-card">
-              <img src="/assets/img/games/images (1).jpeg" alt="Diamonds" />
+              <img src="assets/img/games/images (1).jpeg" alt="Diamonds" />
               <div class="game-info">
                 <span class="tag">Top</span>
                 <p class="game-name">Diamonds</p>
@@ -192,7 +192,7 @@
             </div>
             <div class="game-card">
               <img
-                src="/assets/img/games/images (2).jpeg"
+                src="assets/img/games/images (2).jpeg"
                 alt="Sweet Bonanza"
               />
               <div class="game-info">
@@ -201,14 +201,14 @@
               </div>
             </div>
             <div class="game-card">
-              <img src="/assets/img/games/images (3).jpeg" alt="Sweet Party" />
+              <img src="assets/img/games/images (3).jpeg" alt="Sweet Party" />
               <div class="game-info">
                 <span class="tag">Party</span>
                 <p class="game-name">Sweet Party</p>
               </div>
             </div>
             <div class="game-card">
-              <img src="/assets/img/games/images (4).webp" alt="Video Poker" />
+              <img src="assets/img/games/images (4).webp" alt="Video Poker" />
               <div class="game-info">
                 <span class="tag">Poker</span>
                 <p class="game-name">Video Poker</p>
@@ -216,7 +216,7 @@
             </div>
             <div class="game-card">
               <img
-                src="/assets/img/games/images (5).jpeg"
+                src="assets/img/games/images (5).jpeg"
                 alt="Jackpot Slots"
               />
               <div class="game-info">
@@ -225,7 +225,7 @@
               </div>
             </div>
             <div class="game-card">
-              <img src="/assets/img/games/images (1).jpeg" alt="Diamonds" />
+              <img src="assets/img/games/images (1).jpeg" alt="Diamonds" />
               <div class="game-info">
                 <span class="tag">Top</span>
                 <p class="game-name">Diamonds</p>
@@ -233,7 +233,7 @@
             </div>
             <div class="game-card">
               <img
-                src="/assets/img/games/images (2).jpeg"
+                src="assets/img/games/images (2).jpeg"
                 alt="Sweet Bonanza"
               />
               <div class="game-info">
@@ -242,14 +242,14 @@
               </div>
             </div>
             <div class="game-card">
-              <img src="/assets/img/games/images (3).jpeg" alt="Sweet Party" />
+              <img src="assets/img/games/images (3).jpeg" alt="Sweet Party" />
               <div class="game-info">
                 <span class="tag">Party</span>
                 <p class="game-name">Sweet Party</p>
               </div>
             </div>
             <div class="game-card">
-              <img src="/assets/img/games/images (4).webp" alt="Video Poker" />
+              <img src="assets/img/games/images (4).webp" alt="Video Poker" />
               <div class="game-info">
                 <span class="tag">Poker</span>
                 <p class="game-name">Video Poker</p>
@@ -257,7 +257,7 @@
             </div>
             <div class="game-card">
               <img
-                src="/assets/img/games/images (5).jpeg"
+                src="assets/img/games/images (5).jpeg"
                 alt="Jackpot Slots"
               />
               <div class="game-info">
@@ -273,7 +273,7 @@
         <div class="games-slider reverse">
           <div class="games-track">
             <div class="game-card">
-              <img src="/assets/img/games/images (1).jpeg" alt="Diamonds" />
+              <img src="assets/img/games/images (1).jpeg" alt="Diamonds" />
               <div class="game-info">
                 <span class="tag">Top</span>
                 <p class="game-name">Diamonds</p>
@@ -281,7 +281,7 @@
             </div>
             <div class="game-card">
               <img
-                src="/assets/img/games/images (2).jpeg"
+                src="assets/img/games/images (2).jpeg"
                 alt="Sweet Bonanza"
               />
               <div class="game-info">
@@ -290,14 +290,14 @@
               </div>
             </div>
             <div class="game-card">
-              <img src="/assets/img/games/images (3).jpeg" alt="Sweet Party" />
+              <img src="assets/img/games/images (3).jpeg" alt="Sweet Party" />
               <div class="game-info">
                 <span class="tag">Party</span>
                 <p class="game-name">Sweet Party</p>
               </div>
             </div>
             <div class="game-card">
-              <img src="/assets/img/games/images (4).webp" alt="Video Poker" />
+              <img src="assets/img/games/images (4).webp" alt="Video Poker" />
               <div class="game-info">
                 <span class="tag">Poker</span>
                 <p class="game-name">Video Poker</p>
@@ -305,7 +305,7 @@
             </div>
             <div class="game-card">
               <img
-                src="/assets/img/games/images (5).jpeg"
+                src="assets/img/games/images (5).jpeg"
                 alt="Jackpot Slots"
               />
               <div class="game-info">
@@ -315,7 +315,7 @@
             </div>
 
             <div class="game-card">
-              <img src="/assets/img/games/images (1).jpeg" alt="Diamonds" />
+              <img src="assets/img/games/images (1).jpeg" alt="Diamonds" />
               <div class="game-info">
                 <span class="tag">Top</span>
                 <p class="game-name">Diamonds</p>
@@ -323,7 +323,7 @@
             </div>
             <div class="game-card">
               <img
-                src="/assets/img/games/images (2).jpeg"
+                src="assets/img/games/images (2).jpeg"
                 alt="Sweet Bonanza"
               />
               <div class="game-info">
@@ -332,14 +332,14 @@
               </div>
             </div>
             <div class="game-card">
-              <img src="/assets/img/games/images (3).jpeg" alt="Sweet Party" />
+              <img src="assets/img/games/images (3).jpeg" alt="Sweet Party" />
               <div class="game-info">
                 <span class="tag">Party</span>
                 <p class="game-name">Sweet Party</p>
               </div>
             </div>
             <div class="game-card">
-              <img src="/assets/img/games/images (4).webp" alt="Video Poker" />
+              <img src="assets/img/games/images (4).webp" alt="Video Poker" />
               <div class="game-info">
                 <span class="tag">Poker</span>
                 <p class="game-name">Video Poker</p>
@@ -347,7 +347,7 @@
             </div>
             <div class="game-card">
               <img
-                src="/assets/img/games/images (5).jpeg"
+                src="assets/img/games/images (5).jpeg"
                 alt="Jackpot Slots"
               />
               <div class="game-info">
@@ -363,7 +363,7 @@
         <div class="games-slider">
           <div class="games-track">
             <div class="game-card">
-              <img src="/assets/img/games/images (1).jpeg" alt="Diamonds" />
+              <img src="assets/img/games/images (1).jpeg" alt="Diamonds" />
               <div class="game-info">
                 <span class="tag">Top</span>
                 <p class="game-name">Diamonds</p>
@@ -371,7 +371,7 @@
             </div>
             <div class="game-card">
               <img
-                src="/assets/img/games/images (2).jpeg"
+                src="assets/img/games/images (2).jpeg"
                 alt="Sweet Bonanza"
               />
               <div class="game-info">
@@ -380,14 +380,14 @@
               </div>
             </div>
             <div class="game-card">
-              <img src="/assets/img/games/images (3).jpeg" alt="Sweet Party" />
+              <img src="assets/img/games/images (3).jpeg" alt="Sweet Party" />
               <div class="game-info">
                 <span class="tag">Party</span>
                 <p class="game-name">Sweet Party</p>
               </div>
             </div>
             <div class="game-card">
-              <img src="/assets/img/games/images (4).webp" alt="Video Poker" />
+              <img src="assets/img/games/images (4).webp" alt="Video Poker" />
               <div class="game-info">
                 <span class="tag">Poker</span>
                 <p class="game-name">Video Poker</p>
@@ -395,7 +395,7 @@
             </div>
             <div class="game-card">
               <img
-                src="/assets/img/games/images (5).jpeg"
+                src="assets/img/games/images (5).jpeg"
                 alt="Jackpot Slots"
               />
               <div class="game-info">
@@ -404,7 +404,7 @@
               </div>
             </div>
             <div class="game-card">
-              <img src="/assets/img/games/images (1).jpeg" alt="Diamonds" />
+              <img src="assets/img/games/images (1).jpeg" alt="Diamonds" />
               <div class="game-info">
                 <span class="tag">Top</span>
                 <p class="game-name">Diamonds</p>
@@ -412,7 +412,7 @@
             </div>
             <div class="game-card">
               <img
-                src="/assets/img/games/images (2).jpeg"
+                src="assets/img/games/images (2).jpeg"
                 alt="Sweet Bonanza"
               />
               <div class="game-info">
@@ -421,14 +421,14 @@
               </div>
             </div>
             <div class="game-card">
-              <img src="/assets/img/games/images (3).jpeg" alt="Sweet Party" />
+              <img src="assets/img/games/images (3).jpeg" alt="Sweet Party" />
               <div class="game-info">
                 <span class="tag">Party</span>
                 <p class="game-name">Sweet Party</p>
               </div>
             </div>
             <div class="game-card">
-              <img src="/assets/img/games/images (4).webp" alt="Video Poker" />
+              <img src="assets/img/games/images (4).webp" alt="Video Poker" />
               <div class="game-info">
                 <span class="tag">Poker</span>
                 <p class="game-name">Video Poker</p>
@@ -436,7 +436,7 @@
             </div>
             <div class="game-card">
               <img
-                src="/assets/img/games/images (5).jpeg"
+                src="assets/img/games/images (5).jpeg"
                 alt="Jackpot Slots"
               />
               <div class="game-info">
@@ -493,7 +493,7 @@
 
     <section class="cta">
       <div class="cta-content">
-        <img src="/assets/img/elogo.webp" alt="Logo" class="cta-logo" />
+        <img src="assets/img/elogo.webp" alt="Logo" class="cta-logo" />
         <h2 class="cta-title">
           Start playing with <br />
           <strong>EmpireCasino</strong> today
@@ -522,7 +522,7 @@
     <footer class="site-footer">
       <div class="footer-container">
         <div class="footer-brand">
-          <img src="/assets/img/elogo.webp" alt="Logo del Casino" />
+          <img src="assets/img/elogo.webp" alt="Logo del Casino" />
           <p>
             The best online casino to experience real excitement from anywhere.
           </p>
@@ -560,7 +560,7 @@
       </div>
     </footer>
 
-    <script src="/assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
     <script>
       window.addEventListener("scroll", function () {
         const header = document.querySelector(".main-header");
