--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
   </head>
-  <body>
+  <body id="top">
     <div class="top-bar">
       <div class="top-slider">
         <span>
@@ -34,7 +34,7 @@
     <header class="main-header">
       <div class="container">
         <div class="logo">
-          <a href="/">
+          <a href="#top">
             <img src="assets/img/elogo.webp" alt="EmpireCasino Logo" />
           </a>
         </div>
@@ -102,18 +102,12 @@
         </div>
 
         <div class="hero-img">
-          <img
-            src="assets/img/hero-elements/rueda.png"
-            class="element rueda"
-          />
+          <img src="assets/img/hero-elements/rueda.png" class="element rueda" />
           <img
             src="assets/img/hero-elements/cartas.png"
             class="element cartas"
           />
-          <img
-            src="assets/img/hero-elements/dados.png"
-            class="element dados"
-          />
+          <img src="assets/img/hero-elements/dados.png" class="element dados" />
           <img
             src="assets/img/hero-elements/fichas-rojas.png"
             class="element fichas-rojas"
@@ -191,10 +185,7 @@
               </div>
             </div>
             <div class="game-card">
-              <img
-                src="assets/img/games/images (2).jpeg"
-                alt="Sweet Bonanza"
-              />
+              <img src="assets/img/games/images (2).jpeg" alt="Sweet Bonanza" />
               <div class="game-info">
                 <span class="tag">New</span>
                 <p class="game-name">Sweet Bonanza</p>
@@ -215,10 +206,7 @@
               </div>
             </div>
             <div class="game-card">
-              <img
-                src="assets/img/games/images (5).jpeg"
-                alt="Jackpot Slots"
-              />
+              <img src="assets/img/games/images (5).jpeg" alt="Jackpot Slots" />
               <div class="game-info">
                 <span class="tag">Bonus</span>
                 <p class="game-name">Jackpot Slots</p>
@@ -232,10 +220,7 @@
               </div>
             </div>
             <div class="game-card">
-              <img
-                src="assets/img/games/images (2).jpeg"
-                alt="Sweet Bonanza"
-              />
+              <img src="assets/img/games/images (2).jpeg" alt="Sweet Bonanza" />
               <div class="game-info">
                 <span class="tag">New</span>
                 <p class="game-name">Sweet Bonanza</p>
@@ -256,10 +241,7 @@
               </div>
             </div>
             <div class="game-card">
-              <img
-                src="assets/img/games/images (5).jpeg"
-                alt="Jackpot Slots"
-              />
+              <img src="assets/img/games/images (5).jpeg" alt="Jackpot Slots" />
               <div class="game-info">
                 <span class="tag">Bonus</span>
                 <p class="game-name">Jackpot Slots</p>
@@ -280,10 +262,7 @@
               </div>
             </div>
             <div class="game-card">
-              <img
-                src="assets/img/games/images (2).jpeg"
-                alt="Sweet Bonanza"
-              />
+              <img src="assets/img/games/images (2).jpeg" alt="Sweet Bonanza" />
               <div class="game-info">
                 <span class="tag">New</span>
                 <p class="game-name">Sweet Bonanza</p>
@@ -304,10 +283,7 @@
               </div>
             </div>
             <div class="game-card">
-              <img
-                src="assets/img/games/images (5).jpeg"
-                alt="Jackpot Slots"
-              />
+              <img src="assets/img/games/images (5).jpeg" alt="Jackpot Slots" />
               <div class="game-info">
                 <span class="tag">Bonus</span>
                 <p class="game-name">Jackpot Slots</p>
@@ -322,10 +298,7 @@
               </div>
             </div>
             <div class="game-card">
-              <img
-                src="assets/img/games/images (2).jpeg"
-                alt="Sweet Bonanza"
-              />
+              <img src="assets/img/games/images (2).jpeg" alt="Sweet Bonanza" />
               <div class="game-info">
                 <span class="tag">Nuevo</span>
                 <p class="game-name">Sweet Bonanza</p>
@@ -346,10 +319,7 @@
               </div>
             </div>
             <div class="game-card">
-              <img
-                src="assets/img/games/images (5).jpeg"
-                alt="Jackpot Slots"
-              />
+              <img src="assets/img/games/images (5).jpeg" alt="Jackpot Slots" />
               <div class="game-info">
                 <span class="tag">Bonus</span>
                 <p class="game-name">Jackpot Slots</p>
@@ -370,10 +340,7 @@
               </div>
             </div>
             <div class="game-card">
-              <img
-                src="assets/img/games/images (2).jpeg"
-                alt="Sweet Bonanza"
-              />
+              <img src="assets/img/games/images (2).jpeg" alt="Sweet Bonanza" />
               <div class="game-info">
                 <span class="tag">New</span>
                 <p class="game-name">Sweet Bonanza</p>
@@ -394,10 +361,7 @@
               </div>
             </div>
             <div class="game-card">
-              <img
-                src="assets/img/games/images (5).jpeg"
-                alt="Jackpot Slots"
-              />
+              <img src="assets/img/games/images (5).jpeg" alt="Jackpot Slots" />
               <div class="game-info">
                 <span class="tag">Bonus</span>
                 <p class="game-name">Jackpot Slots</p>
@@ -411,10 +375,7 @@
               </div>
             </div>
             <div class="game-card">
-              <img
-                src="assets/img/games/images (2).jpeg"
-                alt="Sweet Bonanza"
-              />
+              <img src="assets/img/games/images (2).jpeg" alt="Sweet Bonanza" />
               <div class="game-info">
                 <span class="tag">New</span>
                 <p class="game-name">Sweet Bonanza</p>
@@ -435,10 +396,7 @@
               </div>
             </div>
             <div class="game-card">
-              <img
-                src="assets/img/games/images (5).jpeg"
-                alt="Jackpot Slots"
-              />
+              <img src="assets/img/games/images (5).jpeg" alt="Jackpot Slots" />
               <div class="game-info">
                 <span class="tag">Bonus</span>
                 <p class="game-name">Jackpot Slots</p>
@@ -522,7 +480,9 @@
     <footer class="site-footer">
       <div class="footer-container">
         <div class="footer-brand">
-          <img src="assets/img/elogo.webp" alt="Logo del Casino" />
+          <a href="#top">
+            <img src="assets/img/elogo.webp" alt="Logo del Casino" />
+          </a>
           <p>
             The best online casino to experience real excitement from anywhere.
           </p>
@@ -569,6 +529,13 @@
         } else {
           header.classList.remove("scrolled");
         }
+      });
+
+      const toggleBtn = document.querySelector(".menu-toggle");
+      const header = document.querySelector(".main-header");
+
+      toggleBtn.addEventListener("click", () => {
+        header.classList.toggle("menu-open");
       });
     </script>
   </body>
