--- a/index.html
+++ b/index.html
@@ -510,6 +510,7 @@
               <i class="fab fa-instagram"></i>
             </a>
           </div>
+          <img class="senior-img" src="assets/img/trustsignals-Photoroom.png" alt="Logo del Casino" />
         </div>
       </div>
 
