--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
             <p>Get your exclusive bonus and start playing today!</p>
             <input type="text" placeholder="Full Name" required />
             <input type="email" placeholder="Email" required />
-            <button type="submit">GET 500 SPINS!</button>
+            <button type="submit">Get 500 SPINS!</button>
             <small class="form-note">
               <i class="fas fa-check-circle"></i> New players only •
               Limited-time offer
@@ -454,9 +454,9 @@
         <img src="assets/img/elogo.webp" alt="Logo" class="cta-logo" />
         <h2 class="cta-title">
           Start playing with <br />
-          <strong>EmpireCasino</strong> today
+          <strong>Empireonet</strong> today
         </h2>
-        <a href="#registro" class="cta-btn">Get started now!</a>
+        <a href="#registro" class="cta-btn">GET STARTED NOW!</a>
       </div>
     </section>
 
